RESOLVED FIXED49793
[gtk] Zero-sized font does not yet work
https://bugs.webkit.org/show_bug.cgi?id=49793
Summary [gtk] Zero-sized font does not yet work
Alejandro G. Castro
Reported 2010-11-19 04:49:51 PST
Check the bug 49759 for more details, I'm adding a new bug because probably we will need a different patches for Gtk and Qt.
Attachments
Proposed patch (3.77 KB, patch)
2011-01-13 11:16 PST, Alejandro G. Castro
mrobinson: review+
Alejandro G. Castro
Comment 1 2011-01-13 11:16:09 PST
Created attachment 78832 [details] Proposed patch
Martin Robinson
Comment 2 2011-01-13 11:20:05 PST
Comment on attachment 78832 [details] Proposed patch Great!
Alejandro G. Castro
Comment 3 2011-01-13 11:48:55 PST
Note You need to log in before you can comment on or make changes to this bug.