2011-01-13  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        [gtk] Zero-sized font does not yet work
        https://bugs.webkit.org/show_bug.cgi?id=49793

        Unskip font-size-zero.html.

        * platform/gtk/Skipped:

2011-01-13  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Martin Robinson.

        [gtk] Zero-sized font does not yet work
        https://bugs.webkit.org/show_bug.cgi?id=49793

        Set minimum-font-size to 0 for the DRT.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):

2011-01-13  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Martin Robinson.

        [gtk] Zero-sized font does not yet work
        https://bugs.webkit.org/show_bug.cgi?id=49793

        Allow 0 as a minimum-font-size value for the settings.

        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):

Canonical link: https://commits.webkit.org/65994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75729 268f45cc-cd09-0410-ab3c-d52691b4dbfc